--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,7 +40,6 @@ Client_Connection:
 
     - echo "Testing Client DB Connection..."
     - pytest ./test/test_client_dbconnection.py -v
-  needs: ["Test_Environment"]
 
 Admin_Connection:
   stage: DB_Connection
@@ -53,7 +52,6 @@ Admin_Connection:
 
     - echo "Testing Admin DB Connection..."
     - pytest ./test/test_admin_dbconnection.py -v
-  needs: ["Test_Environment"]
 
 Client_Function:
   stage: Functions_Test
@@ -115,7 +113,6 @@ Client_build_push_GitLab:
     - docker push $IMAGE_TAG
     - docker push $CI_REGISTRY_IMAGE:latest
 
-
 Admin_build_push_Azure:
   stage: Build_Push_Azure
   image: docker:latest
@@ -140,27 +137,60 @@ Client_build_push_Azure:
     - docker build -f Dockerfile.client -t $AZURE_IMAGE_TAG .
     - docker push $AZURE_IMAGE_TAG
 
-Admin_Deploy_to_azure:
+######################
+
+Deploy_Admin_to_Azure:
   stage: Deploy_ACI
   image: mcr.microsoft.com/azure-cli
+  
   variables:
     AZURE_IMAGE_TAG: $ACR_LOGIN_SERVER/admin_ver:latest
+  
   script:
     - echo "Logging into Azure..."
-    - az login --service-principal -u $AZURE_CLIENT_ID -p $AZURE_SECRET --tenant $AZURE_TENANT_ID
-    - az account set --subscription $AZURE_SUBSCRIPTION_ID
+    - az login --service-principal --username $AZURE_APP_ID --password $CLIENT_SECRET --tenant $AZURE_TENANT_ID
+    
     - echo "Deploying container..."
-    - az container create \
-      --resource-group myself \
-      --name ASUCourseAdmin \
-      --image $ACR_LOGIN_SERVER/admin_ver:latest \
-      --registry-login-server $ACR_LOGIN_SERVER \
-      --registry-username $ACR_USERNAME \
-      --registry-password $ACR_PASSWORD \
-      --dns-name-label courseadmin$RANDOM \
-      --ports 80 \
-      --os-type Linux \
-      --memory 1 \
-      --cpu 1 \
-      --location eastus
+    - |
+      az container create \
+        --resource-group myself \
+        --name asucourseadmin \
+        --image $AZURE_IMAGE_TAG \
+        --registry-login-server $ACR_LOGIN_SERVER \
+        --registry-username $ACR_USERNAME \
+        --registry-password $ACR_PASSWORD \
+        --dns-name-label courseadmin$RANDOM \
+        --ports 80 \
+        --os-type Linux \
+        --memory 1 \
+        --cpu 1 \
+        --location eastus
+    
+Deploy_Client_to_Azure:
+  stage: Deploy_ACI
+  image: mcr.microsoft.com/azure-cli
+  
+  variables:
+    AZURE_IMAGE_TAG: $ACR_LOGIN_SERVER/client_ver:latest
+  
+  script:
+    - echo "Logging into Azure..."
+    - az login --service-principal --username $AZURE_APP_ID --password $CLIENT_SECRET --tenant $AZURE_TENANT_ID
+    
+    - echo "Deploying container..."
+    - |
+      az container create \
+        --resource-group myself \
+        --name asucourseclient \
+        --image $AZURE_IMAGE_TAG \
+        --registry-login-server $ACR_LOGIN_SERVER \
+        --registry-username $ACR_USERNAME \
+        --registry-password $ACR_PASSWORD \
+        --dns-name-label courseclient$RANDOM \
+        --ports 80 \
+        --os-type Linux \
+        --memory 1 \
+        --cpu 1 \
+        --location eastus
+
 
